--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^2.24.2
   cloud_firestore: ^4.13.6
   firebase_auth: ^4.16.0
+  firebase_dynamic_links: ^5.4.8
 
   google_maps_flutter: ^2.0.3
   fade_and_translate: ^0.1.3
@@ -58,7 +59,7 @@ dependencies:
   path_provider: ^2.1.1
   firebase_storage: ^11.6.0
   google_places_autocomplete_text_field: ^0.1.3
-
+  share_plus: ^7.0.2
 
 dev_dependencies:
   flutter_test:
