--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dev_dependencies:
   dotted_line: ^3.2.2
   timelines: ^0.1.0
   label_marker: ^1.0.1
+  firebase_analytics: ^10.3.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
