--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,6 @@ dependencies:
   cloud_firestore: ^4.13.6
   firebase_auth: ^4.16.0
   firebase_dynamic_links: ^5.4.8
-
   google_maps_flutter: ^2.0.3
   fade_and_translate: ^0.1.3
   flutter_native_splash: ^2.3.2
@@ -60,6 +59,7 @@ dependencies:
   firebase_storage: ^11.6.0
   google_places_autocomplete_text_field: ^0.1.3
   share_plus: ^7.0.2
+  firebase_messaging: ^14.7.20
 
 dev_dependencies:
   flutter_test:
