--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dependencies:
   firebase_storage: ^11.6.0
   google_places_autocomplete_text_field: ^0.1.3
   share_plus: ^7.0.2
-  firebase_messaging: ^14.7.20
+#  firebase_messaging: ^14.7.20
 
 dev_dependencies:
   flutter_test:
