--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,10 @@ dev_dependencies:
   timelines: ^0.1.0
   label_marker: ^1.0.1
   firebase_analytics: ^10.3.0
+  google_maps_place_picker_mb: ^3.0.2
+  geolocator: ^9.0.1
+  permission_handler: ^10.2.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
