--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,8 @@ dev_dependencies:
   timelines: ^0.1.0
   label_marker: ^1.0.1
   firebase_analytics: ^10.3.0
+  image_picker: ^1.0.8
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
