--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   firebase_storage: ^11.6.0
   google_places_autocomplete_text_field: ^0.1.3
   share_plus: ^7.0.2
+  url_launcher: ^6.1.14
+  flutter_phone_direct_caller: ^2.1.1
 #  firebase_messaging: ^14.7.20
 
 dev_dependencies:
