--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   flutter_localizations:
     sdk: flutter
 
@@ -59,7 +60,8 @@ dependencies:
   firebase_storage: ^11.6.0
   google_places_autocomplete_text_field: ^0.1.3
   share_plus: ^7.0.2
-#  firebase_messaging: ^14.7.20
+  firebase_messaging: ^14.6.5
+#  firebase_messaging_web: ^3.7.0
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +82,9 @@ dev_dependencies:
   label_marker: ^1.0.1
   firebase_analytics: ^10.3.0
   image_picker: ^1.0.8
+  google_maps_flutter: ^2.5.3
+  geolocator: ^11.0.0
+#  firebase_messaging: ^14.7.20
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
