--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,9 @@ dependencies:
   google_places_autocomplete_text_field: ^0.1.3
   share_plus: ^7.0.2
   firebase_messaging: ^14.6.5
-#  firebase_messaging_web: ^3.7.0
+  flutter_local_notifications: ^15.1.0+1
+
+  #  firebase_messaging_web: ^3.7.0
   url_launcher: ^6.1.14
   flutter_phone_direct_caller: ^2.1.1
   fluttercontactpicker: ^4.7.0
