--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   flutter_phone_direct_caller: ^2.1.1
   fluttercontactpicker: ^4.7.0
 #  firebase_messaging: ^14.7.20
+  intl: ^0.18.0
+  local_auth: ^2.1.8
 
 dev_dependencies:
   flutter_test:
