--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,10 +67,12 @@ dependencies:
   permission_handler: ^10.2.1
   geolocator: ^9.0.1
   firebase_database: ^10.4.9
-  #  record: ^5.0.5
-#  audioplayers: ^5.2.1
+  record: ^5.0.5
+  audioplayers: ^5.2.1
+  uuid: ^3.0.7
+  connectivity_plus: ^6.0.3
 #  camera: ^0.11.0
-
+  internet_connection_checker: ^1.0.0+1
   #  firebase_messaging_web: ^3.7.0
   url_launcher: ^6.1.14
   flutter_phone_direct_caller: ^2.1.1
