--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
 #  firebase_messaging: ^14.7.20
   intl: ^0.18.0
   local_auth: ^2.1.8
+  date_format: ^2.0.6
 
 dev_dependencies:
   flutter_test:
