--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
 #  firebase_messaging: ^14.7.20
   local_auth: ^2.1.8
   date_format: ^2.0.6
+  loadmore: ^2.0.1
 
 dev_dependencies:
   flutter_test:
