--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   share_plus: ^7.0.2
   firebase_messaging: ^14.6.5
   flutter_local_notifications: ^15.1.0+1
-
+  multiple_images_picker: ^1.0.1
   #  firebase_messaging_web: ^3.7.0
   url_launcher: ^6.1.14
   flutter_phone_direct_caller: ^2.1.1
