--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,52 +36,58 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
   flutter_gif: ^0.0.4
-  get: ^4.6.4
+  get: ^4.6.6
   pin_code_fields: ^8.0.1
-  intl_phone_number_input: ^0.7.3
+  intl_phone_number_input: ^0.7.4
   intl_phone_field: ^3.2.0
   font_awesome_flutter: ^10.7.0
-  syncfusion_flutter_datepicker: ^22.2.11
-  firebase_core: ^2.24.2
-  cloud_firestore: ^4.13.6
-  firebase_auth: ^4.16.0
-  firebase_dynamic_links: ^5.4.8
-  google_maps_flutter: ^2.0.3
+  syncfusion_flutter_datepicker: ^26.2.8
+  firebase_core: ^3.3.0
+  cloud_firestore: ^5.2.1
+  firebase_auth: ^5.1.4
+  google_maps_flutter: ^2.9.0
   fade_and_translate: ^0.1.3
   flutter_native_splash: ^2.3.2
   flare_flutter: ^3.0.2
-  flutter_drawing_board: ^0.5.0
-  #dotted_border: ^2.1.0
-  fdottedline_nullsafety: ^2.0.0
+  flutter_drawing_board: ^0.8.1
+  fdottedline_nullsafety: ^2.0.1
   image_picker: ^1.0.2
   path_provider: ^2.1.1
-  firebase_storage: ^11.6.0
+  firebase_storage: ^12.1.2
   google_places_autocomplete_text_field: ^0.1.3
   share_plus: ^7.0.2
-  firebase_messaging: ^14.7.19
+  firebase_messaging: ^15.0.4
   flutter_local_notifications: ^15.1.0+1
-  intl: ^0.18.0
+  intl: ^0.19.0
   flutter_sound: ^9.2.13
   permission_handler: ^10.2.1
-  geolocator: ^9.0.1
-  firebase_database: ^10.4.9
+  geolocator: ^10.1.1
+  firebase_database: ^11.0.4
   record: ^5.0.5
-  audioplayers: ^5.2.1
-  uuid: ^3.0.7
-  connectivity_plus: ^6.0.3
-  #  camera: ^0.11.0
+  uuid: ^4.4.2
+  connectivity_plus: ^6.0.5
   internet_connection_checker: ^1.0.0+1
-  #  firebase_messaging_web: ^3.7.0
   url_launcher: ^6.1.14
   flutter_phone_direct_caller: ^2.1.1
   fluttercontactpicker: ^4.7.0
-  #  firebase_messaging: ^14.7.20
   local_auth: ^2.1.8
   date_format: ^2.0.6
   loadmore: ^2.0.1
+  win32: ^5.5.1
   fluttertoast: ^8.2.4
+  firebase_dynamic_links: ^6.0.4
+  flutter_lints: ^2.0.0
+  shared_preferences: ^2.2.2
+  flutter_keyboard_visibility: ^6.0.0
+  timeline_tile: ^2.0.0
+  dotted_line: ^3.2.2
+  timelines: ^0.1.0
+  label_marker: ^1.0.1
+  firebase_analytics: ^11.2.1
+  google_maps_place_picker_mb: ^3.1.2
+  timeago: ^3.6.0
 
 dev_dependencies:
   flutter_test:
@@ -92,22 +98,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-  shared_preferences: ^2.2.2
-  flutter_native_splash: ^2.3.2
-  flutter_keyboard_visibility: ^6.0.0
-  timeline_tile: ^2.0.0
-  dotted_line: ^3.2.2
-  timelines: ^0.1.0
-  label_marker: ^1.0.1
-  firebase_analytics: ^10.3.0
-  google_maps_place_picker_mb: ^3.0.2
-  geolocator: ^9.0.1
-  permission_handler: ^10.2.0
-  #image_picker: ^1.0.8
-  #  firebase_messaging: ^14.7.20
-  timeago: ^3.6.0
-#  multiple_images_picker: ^1.0.1
+
 
 
 
